2004-12-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnection.cs: set the event in Close so that if the queue is
	empty, we won't block forever on next request. The finalizer was
	removed because we're not implementing IDisposable pattern here.

2004-12-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnection.cs: handle errors on chunked streams. Fixes bug #66858.
	* ChunkStream.cs: added error checking all over.

	* HttpWebRequest.cs: throw the exception received in SetResponseError
	if we already have a response.
	(SetRequestData): Don't nest the exception if it's a WebException.

2004-12-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnection.cs: remove prevStream and don't set busy to false in
	HandleError. prevStream is not needed any more and setting 'busy' so
	early might let a request skip the queue.
	
	* WebConnectionGroup.cs: decrement the indexer when removing a dead
	reference from the arraylist.

	* WebConnectionStream.cs:
	(ReadAll): call NextRead if it has not been called before even when
	we have completed the request. Reuse the read buffer when reading a
	response of unknown size. Increase the buffer to 8kB.
	(BeginRead): increase pendingReads earlier and even when reading from
	the internal buffer.
	(EndRead): decrease pendingReads later and always.

2004-12-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CookieContainer.cs: style, fixed checks for properties, implemented
	the MonoTODOs for the method that take an Uri. GetCookies and
	GetCookieHeaders now really return only the cookies that are requested
	filtering by the Uri parameter.

	* Cookie.cs: style, added default values for Comment, Domain and Port.

2004-12-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CookieCollection.cs: reformatted, fixed Add by adding a new method to
	search across the arraylist, as list.IndexOf is not what we want.

2004-11-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>
